# lorcagenta

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
agent/: agent.py
db/: card_store.py
ddl/: create_card_table.sql
scripts/: populate_sqlite.py  retrieval.py
test/: test_db.py
