[project]
name = "lorcagenta"
version = "0.0.0"
description = "Agent for exploring lorcana cards!"
readme = "README.md"
authors = [
    { name = "Daniel Cahall", email = "danielenricocahall@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">3.10,<3.14"
dependencies = [
    "langchain",
    "langchain-openai",
    "dash",
    "flask",
    "psycopg2-binary",
    "pysqlscribe"
]


[tool.uv]
dev-dependencies = [
    "pytest>=8.3.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]

[tool.hatch.build]
exclude = [
  "/.*",
  "/tests",
]
